--- a/app/globals.css
+++ b/app/globals.css
@@ -1,76 +1,10 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --light-vermillion: #f15d51;
+  --gun-metal: #5e607a;
+  --dark-space-blue: #00001a;
+  --almost-white: #fffdfa;
+  --silver: #c5c6ce;
+  --yellow: #e9aa52;
 }
 
 * {
@@ -79,29 +13,198 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.heading-xl {
+  font-size: 3.5rem;
+  line-height: 100%;
+  font-weight: 700;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.heading-lg {
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  font-weight: 600;
 }
 
-a {
-  color: inherit;
+.heading-md {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+
+.heading-sm {
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+}
+
+.heading-xs {
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+}
+
+.body {
+  font-size: 0.9375rem;
+  line-height: 1.625rem;
+  font-weight: 400;
+}
+
+.container {
+  width: 1110px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.header {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  margin: 2rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header nav ol {
+  list-style-type: none;
+  display: flex;
+  gap: 2.5rem;
+}
+
+.header nav ol li a {
   text-decoration: none;
+  color: var(--gun-metal);
+  transition: all 0.3s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.header nav ol li a:hover {
+  color: var(--light-vermillion);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1.75rem;
+  grid-column: 1/3;
+  grid-row: 2/3;
+  width: 45.625rem;
+}
+
+.main h1 {
+  color: var(--dark-space-blue);
+}
+
+.main .content {
+  display: flex;
+}
+
+.aside {
+  background-color: var(--dark-space-blue);
+  color: var(--almost-white);
+  padding: 2rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  grid-column: 3/4;
+  grid-row: 2/3;
+  width: 21.875rem;
+  margin-left: auto;
+}
+
+.aside h2 {
+  color: var(--yellow);
+  margin-bottom: 2rem;
+}
+
+.most-read-articles {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  grid-column: 1/4;
+  grid-row: 3/4;
+  margin-top: 4.4375rem;
+}
+
+.close-icon,
+.mobile-menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    overflow: hidden;
+  }
+
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 1rem;
+  }
+
+  .header {
+    width: calc(100% - 2rem);
+    position: relative;
+  }
+
+  .header nav {
+    position: absolute;
+    right: -85%;
+    top: 0;
+    width: 75%;
+    background-color: var(--almost-white);
+    transition: all 0.3s ease;
+    padding: 5rem 1.5rem;
+  }
+
+  .header nav.open {
+    height: 1500px;
+  }
+
+  .header nav .close-icon {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+  }
+
+  .header nav a {
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    font-weight: 700;
+    color: var(--dark-space-blue);
+  }
+
+  .header nav.open {
+    right: -2rem;
+  }
+
+  .header nav ol {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .main {
+    grid-column: 1/1;
+    grid-row: 2/3;
+    margin-bottom: 4rem;
+  }
+
+  .aside {
+    grid-column: 1/1;
+    grid-row: 3/4;
+    width: calc(100% - 2rem);
+    margin-left: unset;
+  }
+
+  .most-read-articles {
+    grid-column: 1/1;
+    grid-row: 4/5;
+    flex-direction: column;
+  }
+
+  .close-icon,
+  .mobile-menu-icon {
+    display: block;
   }
 }
